@@ -14,13 +14,13 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 fa818ddb4af9a7608f6beb490f60b9f53abaff02 ChangeLog
+SHA1 b8593e4156c20bf7f0642851114ea767149cb5ad ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 2b6b8f9fc192662e60281ea9353bfafae92e2774 MANIFEST
-SHA1 e83b64f8432955b08fc547b86531853906419337 META.yml
+SHA1 924eb90e12af91a811747842aa5f3f2e5a4e715f META.yml
 SHA1 ff35cf1af379307cd2088cf801dcfd3c24c09149 MYMETA.json
 SHA1 1d86d4d631ba1c900fca87906e324e2c894e05d7 MYMETA.yml
-SHA1 de16cbe06c7d940d1038454e866d9e2f96b12f25 Makefile.PL
+SHA1 26bb5b75ee3607731f9ef614701a20e480e6de00 Makefile.PL
 SHA1 ffcc80b5c5cbb52f2c2234e9d66f9f32d63f9be7 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 4fe10515de60ffa439d09fbb4eadf7dc1cfd275f bin/fullauto.pl
@@ -48,13 +48,13 @@ SHA1 5e5bf1fb274122e41b89de64d065cfbacc8b2cd6 lib/Net/FullAuto/Distro/fa_maps.pm
 SHA1 532a954b8f2f3183851b3381bef60d7d70fa0541 lib/Net/FullAuto/Distro/fa_menu.pm
 SHA1 a624f36d14585c7635e2a04cb771e0bf0157c0f7 lib/Net/FullAuto/Distro/fa_menu_demo.pm
 SHA1 c61c03f9beda14559fdf07e569e813a2bd553a53 lib/Net/FullAuto/Distro/fullautologo.jpg
-SHA1 73e0354b66444615b7597749db97983bad64ce6e lib/Net/FullAuto/FA_Core.pm
+SHA1 46be02d447c51a3f1a6566868e3bc7a5c82e0bf8 lib/Net/FullAuto/FA_Core.pm
 SHA1 7f2e13f5f6a798d52ea897d24d07b49af4039341 t/0-signature.t
 SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v1.4.9 (Cygwin)
+Version: GnuPG v1.4.12 (Cygwin)
 
-iEYEARECAAYFAk9SryYACgkQJM3IZYB6aOp+MQCgnpvnxlBUh1aQGJI8/LhyuiDn
-1ZQAn3dzZRCkaEVWHYWyfc5vZ30ODTbE
-=hA95
+iEYEARECAAYFAk9ZJu8ACgkQJM3IZYB6aOpNkACePbQGZ7LEhALC7wSe++gU5pi3
+YqEAn0hHsMCBpcwTezSva0Rd3jYQb8TH
+=2a5R
 -----END PGP SIGNATURE-----
